<resources>
    <string name="About">About</string>
    <string name="Calculator">Calculator</string>
    <string name="Clear">Clear</string>
    <string name="Clear_App_Data">Clear Data</string>
    <string name="Continue">Continue</string>
    <string name="Exercise">Exercise</string>
    <string name="Female">Female</string>
    <string name="Food">Food</string>
    <string name="Frequency">Frequency(Hz):</string>
    <string name="Github_Link">https://github.com/shoukolate/CalorieScope/</string>
    <string name="Hearing_Wellbeing">Hearing Wellbeing</string>
    <string name="Heart_Rate">Heart Rate</string>
    <string name="Home">Home</string>
    <string name="Keep_finger_on_Camera">Keep your finger on camera and flash light and wait…</string>
    <string name="Keep_finger_on_HRM_sensor">Keep your finger on the sensor and wait…</string>
    <string name="Load_Defaults">Load Defaults</string>
    <string name="Male">Male</string>
    <string name="Menu_exit">Exit</string>
    <string name="News">News</string>
    <string name="No">No</string>
    <string name="PersonName">Name</string>
    <string name="Rest">Rest</string>
    <string name="Save">Save</string>
    <string name="Settings">Settings</string>
    <string name="Step">Step</string>
    <string name="Tap_on_YES_if_you_hear_the_sound">Tap on YES if you hear the sound</string>
    <string name="Walk">Walk</string>
    <string name="Yes">Yes</string>
    <string name="_0_ml">( 0 ml )</string>
    <string name="_3rd_party_adapted_code">3rd party adapted code:</string>
    <string name="_3rd_party_libraries_used">3rd party libraries used:</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_paragraph">CalorieScope is an android application which is designed to help the user to maintain healthy lifestyle. The user will be able to maintain the record of physical activities performed over the time such as counting the steps taken. The will also calculate calories burnt while the user walks and also keep track of beverages such as water and caffeine. This application is capable of more operations such as calculating BMI/ WHR to track your body shape. User will also get access to latest health news, health tips and health/ workout related videos. The application uses advanced algorithms and uses inbuilt device hardware to its maximum potential while keeping CPU usage low which makes this application go easy on battery. This application includes a lot of features and tools in a single package without uploading user’s sensitive data online.</string>
    <string name="accelerometer_sensitivity_30">Accelerometer sensitivity: 30</string>
    <string name="add_caffeine_icon">add caffeine icon</string>
    <string name="add_water_icon">add water icon</string>
    <string name="app_name">CalorieScope</string>
    <string name="app_version">Version: 1.2</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_logo">Application logo</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bpm">BPM</string>
    <string name="caffeine_glasses">Caffeine glasses:</string>
    <string name="calculate">Calculate</string>
    <string name="calories_burnt">Calories Burnt</string>
    <string name="calories_icon">calories icon</string>
    <string name="change_youtube_channel_id_for_exercises">Change YouTube channel ID for exercises</string>
    <string name="change_youtube_channel_id_for_healthy_food">Change YouTube channel ID for healthy food</string>
    <string name="change_youtube_datav3_api_key">Change YouTube Data v3 API key (Recommended)</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check">Check</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_fluids_icon">clear fluids icon</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="developed_by">Developed by Shoukolate</string>
    <string name="disclaimer">DISCLAIMER</string>
    <string name="disclaimer_text">BECAUSE THE PROGRAM IS LICENSED FREE OF CHARGE, THERE IS NO WARRANTY FOR THE PROGRAM, TO THE EXTENT PERMITTED BY APPLICABLE LAW. EXCEPT WHEN OTHERWISE STATED IN WRITING THE COPYRIGHT HOLDERS AND/OR OTHER PARTIES PROVIDE THE PROGRAM \"AS IS\" WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESSED OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE. THE ENTIRE RISK AS TO THE QUALITY AND PERFORMANCE OF THE PROGRAM IS WITH YOU. SHOULD THE PROGRAM PROVE DEFECTIVE, YOU ASSUME THE COST OF ALL NECESSARY SERVICING, REPAIR OR CORRECTION.</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_your_own_newsapi_org_api_key">Enter your own newsapi.org API key (Recommended)</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exercise_icon">exercise icon</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="foot_icon">foot icon</string>
    <string name="for_ex_us">For ex. \"us\" without quotes</string>
    <string name="for_ex_youtube_channel_id_exercises">for ex. \"UCiP6wD_tYlYLYh3agzbByWQ\" without quotes</string>
    <string name="for_ex_youtube_channel_id_healthy_food">For ex. \"UCr_-k8z6_RKKxkjWkt8RFvA\" without quotes</string>
    <string name="heart_icon">heart icon</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="heart_rate_detector_using_camera_sensor_and_led">* Heart Rate detector using camera sensor and LED</string>
    <string name="height_ft">Height (ft)</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="news_country">News Country</string>
    <string name="notice">NOTICE</string>
    <string name="notice_text">* Since the pedometer sensor provides the data to the app, accuracy is dependent on the efficiency of the pedometer sensor. In case the pedometer is not present in the device, the accelerometer sensor is used which may have variable accuracy from device to device. You are advised to calibrate sensitivity settings according to your needs.\n\n* Since the heart rate sensor provides data to the app, accuracy is dependent on the efficiency of the heart rate sensor. In case of heart rate sensor is not present in the device, camera and flashlight are used to simulate the methodology and working of real heart rate sensor. This fallback mechanism is not very accurate and calculation may vary from device to device.\n\n* News is provided by newsapi.org, the app developer cannot verify or control the content of news.\n\n* Videos are provided in the app are from two YouTube channels. The app developer cannot verify or control the content provided by the videos.\n\n* No user health data is ever uploaded anywhere.\n\n* App developer does not take any responsibility for content provided by the app.\n\n* App developer is not liable for any kind of damages and health issues occurred due to the usage of this app.</string>
    <string name="numeral_0">0</string>
    <string name="perfecttune">* perfectTune</string>
    <string name="picasso">* picasso</string>
    <string name="pulseview">* pulseview</string>
    <string name="step_counter">Step Counter</string>
    <string name="step_counter_using_accelerometer">* Step counter using accelerometer</string>
    <string name="today_s_summery">Today\'s Summery</string>
    <string name="under_gnu_gpl_v2_license">Under GNU GPL v2 License</string>
    <string name="videos">Videos</string>
    <string name="volley">* volley</string>
    <string name="water_glasses">Water glasses:</string>
    <string name="x">X</string>
    <string name="your_bmi_is">Your Body Mass index is</string>
    <string name="your_last_heart_rate_check_was">Your last heart rate check was</string>
    <string name="your_whr_is">Your Waist Hip ratio is</string>
</resources>