<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:icon="@drawable/ic_menu_home" android:id="@+id/nav_home" android:title="@string/Home"/>
        <item android:icon="@drawable/ic_menu_calculator" android:id="@+id/nav_calculator" android:title="@string/Calculator"/>
        <item android:icon="@drawable/ic_menu_newspaper" android:id="@+id/nav_news" android:title="@string/News"/>
        <item android:icon="@drawable/ic_menu_heart" android:id="@+id/nav_heart_rate" android:visible="false" android:title="@string/Heart_Rate"/>
        <item android:icon="@drawable/ic_menu_heart" android:id="@+id/nav_heart_rate_camera" android:visible="false" android:title="@string/Heart_Rate"/>
        <item android:icon="@drawable/ic_menu_hearing" android:id="@+id/nav_hearing_wellbeing" android:title="@string/Hearing_Wellbeing"/>
        <item android:icon="@drawable/ic_menu_videos" android:id="@+id/nav_videos" android:title="@string/videos"/>
        <item android:icon="@drawable/ic_menu_settings" android:id="@+id/nav_settings" android:title="@string/Settings"/>
        <item android:icon="@drawable/ic_menu_about" android:id="@+id/nav_about" android:title="@string/About"/>
    </group>
</menu>
