<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/colorPrimary" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="?attr/actionBarSize">
    <LinearLayout android:orientation="vertical" android:id="@+id/drawer_layout" android:background="@color/colorPrimary" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center" android:layout_width="250dp" android:layout_height="250dp" android:layout_marginTop="10sp" android:src="@drawable/aboutimage" android:contentDescription="@string/application_logo"/>
        <TextView android:textSize="25sp" android:textColor="@color/white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10sp" android:text="@string/developed_by"/>
        <TextView android:textSize="15sp" android:textColor="@color/white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/under_gnu_gpl_v2_license"/>
        <TextView android:textSize="15sp" android:textColor="@color/white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/Github_Link"/>
        <TextView android:textSize="15sp" android:textColor="@color/white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/app_version"/>
        <TextView android:textSize="15sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10sp" android:layout_marginBottom="10sp" android:text="@string/about_paragraph" android:layout_marginStart="10sp" android:layout_marginEnd="10sp"/>
        <TextView android:textSize="15sp" android:textColor="@color/white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8sp" android:text="@string/_3rd_party_libraries_used"/>
        <TextView android:textSize="15sp" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/picasso" android:onClick="picassoURL" android:layout_marginStart="25sp"/>
        <TextView android:textSize="15sp" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5sp" android:text="@string/volley" android:onClick="volleyURL" android:layout_marginStart="25sp"/>
        <TextView android:textSize="15sp" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5sp" android:text="@string/perfecttune" android:onClick="perfectTuneURL" android:layout_marginStart="25sp"/>
        <TextView android:textSize="15sp" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5sp" android:text="@string/pulseview" android:onClick="pulseviewURL" android:layout_marginStart="25sp"/>
        <TextView android:textSize="15sp" android:textColor="@color/white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8sp" android:layout_marginBottom="8sp" android:text="@string/_3rd_party_adapted_code"/>
        <TextView android:textSize="15sp" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5sp" android:text="@string/step_counter_using_accelerometer" android:onClick="stepCounterUsingAccelerometerURL" android:layout_marginStart="25sp"/>
        <TextView android:textSize="15sp" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5sp" android:layout_marginBottom="10sp" android:text="@string/heart_rate_detector_using_camera_sensor_and_led" android:onClick="heartRateCameraLEDURL" android:layout_marginStart="25sp"/>
        <TextView android:textSize="15sp" android:textColor="@color/white" android:gravity="center_horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5sp" android:layout_marginBottom="10sp" android:text="@string/disclaimer"/>
        <TextView android:textSize="15sp" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5sp" android:layout_marginBottom="10sp" android:text="@string/disclaimer_text" android:layout_marginStart="25sp" android:layout_marginEnd="25sp"/>
        <TextView android:textSize="15sp" android:textColor="@color/white" android:gravity="center_horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5sp" android:layout_marginBottom="10sp" android:text="@string/notice"/>
        <TextView android:textSize="15sp" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5sp" android:layout_marginBottom="10sp" android:text="@string/notice_text" android:layout_marginStart="25sp" android:layout_marginEnd="25sp"/>
    </LinearLayout>
</ScrollView>
