<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/home_background" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="?attr/actionBarSize">
    <LinearLayout android:orientation="vertical" android:background="@color/home_background" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:orientation="vertical" android:background="@color/home_foreground" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="10sp">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="15sp" android:layout_marginStart="15sp">
                <TextView android:textSize="15sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/today_s_summery"/>
                <TextView android:textSize="15sp" android:textStyle="bold" android:textColor="@color/white" android:id="@+id/TodayDateAndTime" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5sp"/>
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15sp">
                    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5sp">
                        <TextView android:textColor="@color/white" android:id="@+id/LastBMI" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/your_bmi_is"/>
                        <TextView android:textColor="@color/white" android:id="@+id/LastWHR" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/your_whr_is"/>
                        <TextView android:textColor="@color/white" android:id="@+id/LastBPM" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/your_last_heart_rate_check_was"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10sp" android:baselineAligned="false" android:weightSum="4">
                <LinearLayout android:gravity="center" android:orientation="vertical" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:weightSum="3" android:layout_weight="1" android:onClick="launch_heart_activity_from_home">
                    <ImageView android:id="@+id/home_heart" android:layout_width="60dp" android:layout_height="20dp" android:src="@drawable/ic_heartblue" android:contentDescription="@string/heart_icon"/>
                    <TextView android:textSize="10sp" android:textStyle="italic" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="20sp" android:text="@string/Heart_Rate"/>
                    <TextView android:textSize="15sp" android:textStyle="bold" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="20sp" android:text="@string/check"/>
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1">
                    <ImageView android:layout_width="60dp" android:layout_height="20dp" android:src="@drawable/ic_bluefootprint" android:contentDescription="@string/foot_icon"/>
                    <TextView android:textSize="10sp" android:textStyle="italic" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="20sp" android:text="@string/step_counter"/>
                    <TextView android:textSize="15sp" android:textStyle="bold" android:textColor="@color/white" android:id="@+id/tv_steps" android:layout_width="wrap_content" android:layout_height="20sp" android:text="@string/numeral_0"/>
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1">
                    <ImageView android:layout_width="60dp" android:layout_height="20dp" android:src="@drawable/ic_caloriesblue" android:contentDescription="@string/calories_icon"/>
                    <TextView android:textSize="10sp" android:textStyle="italic" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="20sp" android:text="@string/calories_burnt"/>
                    <TextView android:textSize="15sp" android:textStyle="bold" android:textColor="@color/white" android:id="@+id/CalorieView" android:layout_width="wrap_content" android:layout_height="20sp" android:text="@string/numeral_0"/>
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1" android:onClick="clear_fluids_lastbpm">
                    <ImageView android:id="@+id/btnClearFluidIntake" android:layout_width="60dp" android:layout_height="20dp" android:src="@drawable/ic_bar" android:contentDescription="@string/clear_fluids_icon"/>
                    <TextView android:textSize="10sp" android:textStyle="italic" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="20sp" android:text="@string/Clear_App_Data"/>
                    <TextView android:textSize="15sp" android:textStyle="bold" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="20sp" android:text="@string/x"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="175sp" android:layout_marginTop="30sp">
                <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                    <ProgressBar android:id="@+id/circularProgressbar" android:layout_width="350sp" android:layout_height="350sp" android:max="10000" android:progress="50" android:secondaryProgress="100" android:indeterminate="false" android:progressDrawable="@drawable/shape_circular" android:layout_alignParentTop="true" android:layout_alignParentEnd="true" style="?android:attr/progressBarStyleHorizontal"/>
                    <TextView android:textSize="20sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/stepsInCircle" android:layout_width="250sp" android:layout_height="250sp" android:text="@string/numeral_0" android:layout_centerInParent="true"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="60sp" android:layout_marginStart="10sp">
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <Button android:id="@+id/btn_start" android:background="@drawable/shape_oval" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Walk" style="?android:attr/borderlessButtonStyle"/>
                    <Button android:textColor="@color/black" android:id="@+id/btn_stop" android:background="@drawable/shape_oval" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Rest" android:layout_marginStart="37sp" style="?android:attr/borderlessButtonStyle"/>
                    <Button android:textColor="@color/black" android:id="@+id/btn_reset" android:background="@drawable/shape_oval" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Clear" android:layout_marginStart="37sp" style="?android:attr/borderlessButtonStyle"/>
                </LinearLayout>
                <LinearLayout android:layout_gravity="start" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10sp">
                    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15sp">
                        <ImageView android:id="@+id/addWater" android:layout_width="40dp" android:layout_height="25dp" android:src="@drawable/ic_add" android:scaleType="center" android:adjustViewBounds="true" android:contentDescription="@string/add_water_icon" android:layout_marginStart="55sp" android:layout_marginEnd="5sp"/>
                        <TextView android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/water_glasses"/>
                        <TextView android:textColor="@color/white" android:id="@+id/currentWaterValue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/numeral_0"/>
                        <TextView android:textColor="@color/white" android:id="@+id/waterQuantity" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/_0_ml" android:layout_marginStart="10sp"/>
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15sp" android:layout_marginBottom="10dp">
                        <ImageView android:id="@+id/addCaffeine" android:layout_width="40dp" android:layout_height="25dp" android:src="@drawable/ic_add" android:scaleType="center" android:adjustViewBounds="true" android:contentDescription="@string/add_caffeine_icon" android:layout_marginStart="55sp" android:layout_marginEnd="5sp"/>
                        <TextView android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/caffeine_glasses"/>
                        <TextView android:textColor="@color/white" android:id="@+id/currentCaffeineValue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/numeral_0"/>
                        <TextView android:textColor="@color/white" android:id="@+id/caffeineQuantity" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/_0_ml" android:layout_marginStart="5sp"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
